sass/styles.scss
@import './scss_vars';

html, body {
  overflow-x: hidden !important;
  max-width: 100%;
}

body {
  position: relative;
}

html {
  max-height: 100%;
  position: relative;
}

* {
  font-family: 'Karla', 'Futura', 'Trebuchet MS', sans-serif;
  color: $text;
}

a {
  font-size: 1.2em;
  color: #fff;
  transition: all .3s;
  letter-spacing: .05em;
  text-align: center;

  &:hover {
    color: $magenta;
    transition: all .3s;
  }
}

a.call_to_action {
  margin-left: 25px;
}

.sky {
  position: absolute;
  top: 0;
  width: 100%;
  z-index: -2;
  height: 900px;
  background-image: linear-gradient(to right,rgba(194, 2, 79, 1), rgba(255, 89, 79, 1));
}

.sky_effect {
  position: absolute;
  z-index: -1;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: $gold;
  animation: transition_opacity 30s infinite;
}

#city {
  position: absolute;
  z-index: -1;
  top: -60px;
  width: 990px;
}

#cloud_1 {
  position: absolute;
  z-index: 2;
  top: 200px;
  animation: cloud_1 60s infinite linear;
}

#cloud_2 {
  position: absolute;
  z-index: 2;
  top: 225px;
  animation: cloud_2 90s infinite linear;
}

@keyframes cloud_1 {
  0% {left: -1600px;}
  100% {left: 2000px;}
}

@keyframes cloud_2 {
  0% {left:-500px; opacity: 1;}
  45% {opacity: 1}
  50% {left: 2000px; opacity: 0;}
  51% {left: -1000px; opacity: 0;}
  100% {left: -500px; opacity: 1;}
}

.hero_div {
  position: absolute;
  z-index: 3;
  top: 200px;
  left: 0;
  right: 0;
  display: block;
  width: 70%;
  margin: auto;

  .hero_text {
    text-align: right;
    font-size: 7em;
    color: #fff;
    font-weight: 600;
  }

  .call_to_action {
    margin-top: 50px;
    float: right;
    width: 50%;
    font-weight: 600;
    font-size: 1.5em;
  }
}

@keyframes transition_opacity {
  0% {opacity: 1;}
  50% {opacity: 0;}
  100% {opacity: 1;}
}

.call_to_action {
  border: 2px solid #fff;

  &:hover {
    color: $magenta;
    transition: all .3s;
    letter-spacing: .05em;
    background-color: #fff;
  }
}

.navigation {
  position: fixed;
  z-index: 4;
  width: 100%;
  padding: 20px;
  background: rgba(255, 255, 255, 0.0);
  transition: all 1.8s;

  .logo {
    width: 200px;
  }
}

.navigation.scroll {
  transition: all 1.8s;
  background-color: $magenta;
}

.page_segue {
  position: relative;
  z-index: 2;
  width: 100%;
  margin-top: 675px;
  min-height: 400px;
  background-color: #fff;
  -webkit-clip-path: polygon(0 7%, 100% 0, 100% 100%, 0% 100%);
  clip-path: polygon(0 7%, 100% 0, 100% 100%, 0% 100%); 
  padding-top: 10px;
}

.section_heading {
  margin-top: 20px;
  color: $magenta;
  font-weight: 600;
  font-size: 3em;
}

.section_heading.right {
  text-align: right;
}

.text {
  font-size: 18px;
  text-align: justify;
}

.row {
  margin-top: 50px;
}

.row.first {
  margin-top: 95px;
}

footer {
  background-color: $magenta;
  position: relative;
  margin-top: 75px;
  bottom: 0;
  height: 400px;
  width: 100%;
  z-index: -2;
  -webkit-clip-path: polygon(0 28%, 100% 0, 100% 100%, 0% 100%);
  clip-path: polygon(0 28%, 100% 0, 100% 100%, 0% 100%);
  
  .sky_effect {
    -webkit-clip-path: polygon(0 28%, 100% 0, 100% 100%, 0% 100%);
    clip-path: polygon(0 28%, 100% 0, 100% 100%, 0% 100%);
  }
}


@media (max-width: 400px) {
  ul.nav.d-flex.justify-content-right {
    display: none !important;
  }

 div.d-flex.nav.justify-content-between {
   justify-content: center !important;
 }

  #city {
    width: 450px;
    top: 250px;
    left: -20px;
  }

  .hero_div {
    top: 170px;

    .hero_text {
      text-align: center;
      font-size: 2.4em;
    }

    .call_to_action {
      float: none;
      width: 250px;
      margin: 25px auto;
    }
  }

  .page_segue {
    margin-top: 520px;
  }

  .section_heading {
    color: $magenta;
    font-weight: 600;
    font-size: 2em;
  }

}

@media screen and (min-width: 401px) and (max-width: 678px) {
  ul.nav.d-flex.justify-content-right {
    display: none !important;
  }

  div.d-flex.nav.justify-content-between {
    justify-content: center !important;
  }

  .page_segue {
    margin-top: 540px;
  }

  #city {
    width: 500px;
    top: 250px;
    left: -20px;
  }

  .hero_div {
    top: 150px;
    width: 80%;

    .hero_text {
      text-align: center;
      font-size: 3em;
    }

    .call_to_action {
      float: none;
      width: 250px;
      margin: 25px auto;
    }
  }
}

@media screen and (min-width: 679px) and (max-width: 1000px) {
  .hero_div .hero_text {
    font-size: 4em;
  }
}

